// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test month object 1`] = `
[
  {
    "date": 2001-07-21T20:30:00.000Z,
    "day": "31",
    "month": "4",
    "year": "1380",
  },
  {
    "date": 2001-07-22T20:30:00.000Z,
    "day": "1",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-23T20:30:00.000Z,
    "day": "2",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-24T20:30:00.000Z,
    "day": "3",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-25T20:30:00.000Z,
    "day": "4",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-26T20:30:00.000Z,
    "day": "5",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-27T20:30:00.000Z,
    "day": "6",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-28T20:30:00.000Z,
    "day": "7",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-29T20:30:00.000Z,
    "day": "8",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-30T20:30:00.000Z,
    "day": "9",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-07-31T20:30:00.000Z,
    "day": "10",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-01T20:30:00.000Z,
    "day": "11",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-02T20:30:00.000Z,
    "day": "12",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-03T20:30:00.000Z,
    "day": "13",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-04T20:30:00.000Z,
    "day": "14",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-05T20:30:00.000Z,
    "day": "15",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-06T20:30:00.000Z,
    "day": "16",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-07T20:30:00.000Z,
    "day": "17",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-08T20:30:00.000Z,
    "day": "18",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-09T20:30:00.000Z,
    "day": "19",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-10T20:30:00.000Z,
    "day": "20",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-11T20:30:00.000Z,
    "day": "21",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-12T20:30:00.000Z,
    "day": "22",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-13T20:30:00.000Z,
    "day": "23",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-14T20:30:00.000Z,
    "day": "24",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-15T20:30:00.000Z,
    "day": "25",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-16T20:30:00.000Z,
    "day": "26",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-17T20:30:00.000Z,
    "day": "27",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-18T20:30:00.000Z,
    "day": "28",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-19T20:30:00.000Z,
    "day": "29",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-20T20:30:00.000Z,
    "day": "30",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-21T20:30:00.000Z,
    "day": "31",
    "month": "5",
    "year": "1380",
  },
  {
    "date": 2001-08-22T20:30:00.000Z,
    "day": "1",
    "month": "6",
    "year": "1380",
  },
  {
    "date": 2001-08-23T20:30:00.000Z,
    "day": "2",
    "month": "6",
    "year": "1380",
  },
  {
    "date": 2001-08-24T20:30:00.000Z,
    "day": "3",
    "month": "6",
    "year": "1380",
  },
]
`;

exports[`test month object 2`] = `
[
  {
    "date": 2001-07-28T20:30:00.000Z,
    "day": "29",
    "month": "7",
    "year": "2001",
  },
  {
    "date": 2001-07-29T20:30:00.000Z,
    "day": "30",
    "month": "7",
    "year": "2001",
  },
  {
    "date": 2001-07-30T20:30:00.000Z,
    "day": "31",
    "month": "7",
    "year": "2001",
  },
  {
    "date": 2001-07-31T20:30:00.000Z,
    "day": "1",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-01T20:30:00.000Z,
    "day": "2",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-02T20:30:00.000Z,
    "day": "3",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-03T20:30:00.000Z,
    "day": "4",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-04T20:30:00.000Z,
    "day": "5",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-05T20:30:00.000Z,
    "day": "6",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-06T20:30:00.000Z,
    "day": "7",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-07T20:30:00.000Z,
    "day": "8",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-08T20:30:00.000Z,
    "day": "9",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-09T20:30:00.000Z,
    "day": "10",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-10T20:30:00.000Z,
    "day": "11",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-11T20:30:00.000Z,
    "day": "12",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-12T20:30:00.000Z,
    "day": "13",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-13T20:30:00.000Z,
    "day": "14",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-14T20:30:00.000Z,
    "day": "15",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-15T20:30:00.000Z,
    "day": "16",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-16T20:30:00.000Z,
    "day": "17",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-17T20:30:00.000Z,
    "day": "18",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-18T20:30:00.000Z,
    "day": "19",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-19T20:30:00.000Z,
    "day": "20",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-20T20:30:00.000Z,
    "day": "21",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-21T20:30:00.000Z,
    "day": "22",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-22T20:30:00.000Z,
    "day": "23",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-23T20:30:00.000Z,
    "day": "24",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-24T20:30:00.000Z,
    "day": "25",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-25T20:30:00.000Z,
    "day": "26",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-26T20:30:00.000Z,
    "day": "27",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-27T20:30:00.000Z,
    "day": "28",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-28T20:30:00.000Z,
    "day": "29",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-29T20:30:00.000Z,
    "day": "30",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-30T20:30:00.000Z,
    "day": "31",
    "month": "8",
    "year": "2001",
  },
  {
    "date": 2001-08-31T20:30:00.000Z,
    "day": "1",
    "month": "9",
    "year": "2001",
  },
]
`;
